--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
 # Set prefix to Ctrl-Space
 unbind C-b
 set -g prefix C-Space
-bind Space send-prefix
+bind C-Space send-prefix
 
 # Use vi keys
 set -gw mode-keys vi
@@ -9,6 +9,7 @@ set -gw mode-keys vi
 # Update window title
 set -g set-titles on		
 set -g set-titles-string '#T - #I:#W'
+set -g set-titles-string "#I:#P - #W - #T"
 
 # Mouse support
 set -g mouse on
@@ -53,9 +54,6 @@ set -g status-interval 10
 set -g status-left-length 50
 set -g status-left '#[fg=green][#I:#P #W] #(whoami)@#(hostname -s) '
 set -g status-right "{#[bold,fg=cyan]#(uptime | awk -F: '{print $(NF)}' | sed s/' '//)#[nobold,fg=default]}  {#[bold,fg=cyan]%a %m/%d %H:%M%p#[nobold,fg=default]}"
-
-# Terminal title bar
-set -g set-titles-string "#I:#P - #W - #T"
 
 # Site-specific config
 source-file ~/.tmux.conf.local
